--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "lint:fix": "eslint \"{/**/*.js\" --fix && git status"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
+    "axios": "^1.6.5",
     "config": "^3.3.10",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.2",
     "express": "~4.16.1",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
