--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
