--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "config": "^3.3.10",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "morgan": "~1.9.1"
