--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" && git status",
-    "lint": "eslint \"/**/*.js\"",
-    "lint:fix": "eslint \"{/**/*.js\" --fix && git status"
+    "format": "prettier --write \"**/*.js\" && git status",
+    "lint": "eslint \"**/*.js\"",
+    "lint:fix": "eslint \"**/*.js\" --fix && git status"
   },
   "dependencies": {
     "ajv": "^8.12.0",
@@ -28,9 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pino": "^8.17.2"
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "eslint": "^8.56.0",
+    "prettier": "3.2.4"
   }
 }
