--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 PORT=
+
 MONGODB_PORT=
 MONGODB_HOST=
 MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_DB=
+
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
+JWT_ALGORITHM=
+JWT_EXPIRES_IN=
+
+PASSWORD_SALT_ROUNDS=
